examples/type_system/failing/71_hm_if_known_type_compile_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/71_hm_if_known_type_compile_mismatch.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 1st argument to `expect_int`.
//
//   examples/type_system/failing/71_hm_if_known_type_compile_mismatch.flx:44:32
//    |
// 34 | fn expect_int(x: Int) -> Int {
//    | ---------------------------- `expect_int` expects `Int` as the 1st parameter
// 35 |     x
// 36 | }
// ... |
// 42 |         "right"
// 43 |     }
// 44 |     print(to_string(expect_int(picked)))
//    |                                ^^^^^^
//    |                                ------ this argument has type `String`
//
// Note:
//   expected argument type: Int
//   found argument type: String
//   the actual argument type is inferred from this expression
//   the expected argument type comes from the function signature
//
// Help:
//   Pass a `Int` value as the 1st argument.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn expect_int(x: Int) -> Int {
    x
}

fn main() -> Unit with IO {
    let picked = if true {
        "left"
    } else {
        "right"
    }
    print(to_string(expect_int(picked)))
}
